
  [ Jelmer Vernooĳ ]
  * debianize: Add warning about state of the tool.

  [ Colin Watson ]
  * gpg: Fix crash if home_dir is None.

  [ Jelmer Vernooĳ ]
  * Add fixer for duplicate-font-file.
  * transitional-package-should-be-oldlibs-optional: Preserve archive
    area. Closes: #1029241
  * Update tag name: wrong-debian-qa-group-name => faulty-debian-qa-
    group-phase.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 21 Dec 2022 12:19:44 +0000

lintian-brush (0.145) unstable; urgency=medium

  * unused-build-dependency-on-cdbs: Cope with missing Build-Depends.
    Closes: #1026052
  * uses-debhelper-compat-file: Only migrate to debhelper-compat for
    stable compat levels. Closes: #1026252

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 17 Dec 2022 15:02:52 +0000

lintian-brush (0.144) unstable; urgency=medium

  * Track site as well.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 11 Dec 2022 09:35:50 +0000

lintian-brush (0.143) unstable; urgency=medium

  * Fix info format fixers for groff-message.
  * Fix spelling error match.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 10 Dec 2022 01:48:54 +0000

lintian-brush (0.142) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Handle missing candidates.
  * Update vim_addon alias; see https://salsa.debian.org/lintian/lintian/-/merge_requests/433
  * Various watch fixes.
  * More watch fixer fixes.
  * Add another possible pattern.
  * Fix style.

  [ Jelmer Vernooij ]
  * Add fix for privacy-breach-google-adsense

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 09 Dec 2022 05:23:33 +0000

lintian-brush (0.141) unstable; urgency=medium

  * Allow removed files.
  * Reformat.
  * Fix repeated-path-segment.
  * Update SPDX license data
  * Update list of fixers in README.md
  * Update key package versions
  * Factor out probe_signature.
  * Lock write.
  * Support generating watch files for Launchpad.
  * Use common _load_json.
  * Error out when there are no candidates.
  * Split out repo URL.