@@ -1,16 +1,0 @@
-#!/bin/sh
-
-### BEGIN INIT INFO
-# Provides:          blah
-# Required-Start:    $local_fs $remote_fs
-# Required-Stop:     $local_fs $remote_fs
-# Should-Start:      $network $named
-# Should-Stop:       $network $named
-# Default-Start:     2 3 4 5
-# Default-Stop:      0 1 6
-# Short-Description: Blah
-# Description:       Blah
-### END INIT INFO
-
-. /lib/lsb/init-functions
-
