@@ -1,3 +1,0 @@
-Add missing dependency on lsb-base.
-Certainty: possible
-Fixed-Lintian-Tags: init.d-script-needs-depends-on-lsb-base
