@@ -1,4 +1,0 @@
-Source: blah
-
-Package: blah
-Depends: ${misc:Depends}, lsb-base
